changed initial appearance

--- a/blackjack-web/html/index.html
+++ b/blackjack-web/html/index.html
@@ -11,8 +11,8 @@
 		<!--
 		    	function init()
 			{
-				add_card(1, 2);
-				add_card(1, 10);
+				add_card(4, 1);
+				add_card(4, 13);
 			}
 		//-->
 		</script>
@@ -27,7 +27,10 @@
 			</form>
 		</div>
 		<div id="game" class="center">
-			<h4 id="player"></h4>
+			<h4 id="player">Enter</h4>
+			<h5 id="balance">a game name</h5>
+			<h6 id="bet">and click</h6>
+			<h6 id="state">'New' or 'Load'!</h6>
 			<div id="cards">
 			</div>
 			<form id="player">
