--- a/blackjack-web/html/index.html
+++ b/blackjack-web/html/index.html
@@ -22,24 +22,53 @@
 			<h3>Blackjack Game</h3>
 			<form id="control">
 				<div>
-					<h4>Game Name:</h4><input name="name" type="text" /><input name="load" type="button" value="Load" onclick="load_game()" /><input name="new" type="button" value="New" onclick="new_game()" />
+					<h4>Game Name:</h4>
+					<input name="name" type="text" />
+					<input name="load" type="button" value="Load" onclick="load_game()" />
+					<input name="new" type="button" value="New" onclick="new_game()" />
 				</div>
 			</form>
 		</div>
-		<div id="game" class="center">
+		<div id="game_area" class="center">
 			<h4 id="player">Enter</h4>
 			<h5 id="balance">a game name</h5>
 			<h6 id="bet">and click</h6>
 			<h6 id="state">'New' or 'Load'!</h6>
 			<div id="cards">
 			</div>
-			<form id="player">
+			<form id="actions">
 				<input name="hit" type="button" value="Hit" onclick="play_hand(this.name)" />
 				<input name="stand" type="button" value="Stand" onclick="play_hand(this.name)" />
 				<input name="dd" type="button" value="Double Down" onclick="play_hand(this.name)" />
 				<input name="split" type="button" value="Split" onclick="play_hand(this.name)" />
-				<input name="surrender" type="button" value="Surrender" onclick="play_hand(this.name)" />
+				<input name="surrender" type="button" value="Surrender" onclick="play_hand(this.name)" /><br />
+				<input name="deal" type="button" value="Deal Game" onclick="deal_game()" />
+				<input name="shuffle" type="button" value="Shuffle" onclick="shuffle_deck()" />
 			</form>
+			<form id="manage_players">
+				<div id="manage_players_div" class="center">
+					<table>
+						<tr>
+							<td>Name</td>
+							<td>Amount</td>
+						</tr>
+						<tr>
+							<td><input name="name" type="text" /></td>
+							<td><input name="amount" type="text" /><br /></td>
+						</tr>
+						<tr>
+							<td>
+								<input name="add" type="button" value="Add" onclick="add_player()" />
+								<input name="remove" type="button" value="Remove" onclick="remove_player()" />
+							</td>
+							<td>
+								<input name="bet" type="button" value="Place Bet" onclick="place_bet()" />
+							</td>
+						</tr>
+					</table>
+				</div>
+			</form>
+			<div id="player_list" class="center"></div>
 		</div>
 	</body>
 </html>
